# evo2-clinvar-harvest

./: .gitignore  README.md  pyproject.toml  utils.py
clinvar/: __init__.py  sampling.py  setup.py
gencode/: __init__.py  setup.py
pipeline/: embed.py  eval.py  finalize.sh  finalize_embed.sh  finalize_harvest.sh  harvest.py  harvest.sh  train.py
src/: __init__.py  analysis.py  streaming.py
src/datasets/: __init__.py  paths.py  utils.py  variant.py
src/datasets/clinvar/: __init__.py  main.py  sampling.py  setup.py
src/datasets/gencode/: __init__.py  main.py  setup.py
src/utils/: __init__.py  metrics.py  setup.py
tests/: test_harvest_resume.py
